--- a/.github/workflows/main_2.yml
+++ b/.github/workflows/main_2.yml
@@ -11,31 +11,31 @@ jobs:
         run: echo "this is step-1"
 
   STAGE-2:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: step-2
         run: echo "this is step-2"
   
   STAGE-3:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: step-3
         run: echo "this is step-3"
 
   STAGE-4:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: step-4
         run: echo "this is step-4"
 
   STAGE-5:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: step-5
         run: echo "this is step-5"
 
   STAGE-6:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - name: step-6
         run: echo "this is step-6"
