--- a/.github/workflows/main_2.yml
+++ b/.github/workflows/main_2.yml
@@ -12,30 +12,40 @@ jobs:
 
   STAGE-2:
     runs-on: ubuntu-latest
+    needs: 
+      - STAGE-3
     steps:
       - name: step-2
         run: echo "this is step-2"
   
   STAGE-3:
     runs-on: ubuntu-latest
+    needs:
+     - STAGE-4
     steps:
       - name: step-3
         run: echo "this is step-3"
 
   STAGE-4:
     runs-on: ubuntu-latest
+    needs:
+      - STAGE-5
     steps:
       - name: step-4
         run: echo "this is step-4"
 
   STAGE-5:
     runs-on: ubuntu-latest
+    needs: 
+     - STAGE-6
     steps:
       - name: step-5
         run: echo "this is step-5"
 
   STAGE-6:
     runs-on: ubuntu-latest
+    needs: 
+      - STAGE-1
     steps:
       - name: step-6
         run: echo "this is step-6"
