--- a/.github/workflows/main_2.yml
+++ b/.github/workflows/main_2.yml
@@ -13,39 +13,39 @@ jobs:
   STAGE-2:
     runs-on: ubuntu-latest
     steps:
-      - name: step-2
+      - name: step-1
         run: echo "this is step-2"
   
   STAGE-3:
     runs-on: ubuntu-latest
-    needs:
-     - STAGE-4
+    # needs:
+    #  - STAGE-4
     steps:
-      - name: step-3
+      - name: step-1
         run: echo "this is step-3"
 
   STAGE-4:
     runs-on: ubuntu-latest
-    needs:
-      - STAGE-5
+    # needs:
+    #   - STAGE-5
     steps:
-      - name: step-4
+      - name: step-1
         run: echo "this is step-4"
 
   STAGE-5:
     runs-on: ubuntu-latest
-    needs: 
-     - STAGE-6
+    # needs: 
+    #  - STAGE-6
     steps:
-      - name: step-5
+      - name: step-1
         run: echo "this is step-5"
 
   STAGE-6:
     runs-on: ubuntu-latest
-    needs: 
-      - STAGE-1
-      - STAGE-2
+    # needs: 
+    #   - STAGE-1
+    #   - STAGE-2
     steps:
-      - name: step-6
+      - name: step-1
         run: echo "this is step-6"
   
