--- a/.github/workflows/main_3.yml
+++ b/.github/workflows/main_3.yml
@@ -3,8 +3,10 @@ name: Triggers Events
 on:
   push:
     branches:
-      - main
-      - master
+      - "main"
+      - "feature/**"
+      - "!master"
+      - "!doc/**"
 
   pull_request:
     types:
