--- a/.github/workflows/main_3.yml
+++ b/.github/workflows/main_3.yml
@@ -10,6 +10,9 @@ on:
     #   - "doc/**"
 
   pull_request:
+    branches: 
+     - "main"
+     - "feature/**"
     types:
       - opened
       - synchronize
