--- a/.github/workflows/main_3.yml
+++ b/.github/workflows/main_3.yml
@@ -6,6 +6,11 @@ on:
       - "main"
       - "feature/**"
       - "master/**"
+
+    paths:
+      - "**"
+      - "!*.md"
+      - "!doc/**"
     
     # branches-ignore:
     #   - "master/**"
