--- a/.github/workflows/main_3.yml
+++ b/.github/workflows/main_3.yml
@@ -19,6 +19,8 @@ on:
   pull_request:
     branches: 
      - "main"
+     - "master"
+     - "feature"
      - "feature/**"
      - "master/**"
     types:
