--- a/.github/workflows/main_3.yml
+++ b/.github/workflows/main_3.yml
@@ -35,8 +35,9 @@ on:
       - "!*.md"
       - "!doc/**"
 
-  schedule:
-    - cron: "45 9 * * *"
+  # schedule:
+  #   - cron: "45 9 * * *"
+  # https://docs.github.com/en/actions/reference/workflows-and-actions/events-that-trigger-workflows#schedule
 
   workflow_dispatch:
   
@@ -53,4 +54,8 @@ jobs:
         run: |
           echo "stage-1"
           date
+      - name: step-2 Dump full event JSON
+        run: |
+          echo "=== $GITHUB_EVENT_NAME payload ==="
+          cat "$GITHUB_EVENT_PATH"
 
