--- a/.github/workflows/main_5.yml
+++ b/.github/workflows/main_5.yml
@@ -1,38 +1,76 @@
-name: Passing Variables Between jobs
+---
+name: Passing Vars In Jobs
+
 on:
   workflow_dispatch:
+  schedule:
+    - cron: "39 9 * * *"
+
+    
+# env:
+#   NAME: "harshith"
+
 
 jobs:
-  producer:
-    runs-on: ubuntu-24.04
-
+  
+  name_gen:
+    runs-on: ubuntu-latest
+    steps:
+      - name: STEP-1
+        id: set_my_name
+        run: |
+          echo "MYNAME=HARSHITH REDDY" >> "$GITHUB_OUTPUT"
     outputs:
-      foo: ${{ steps.generate-foo.outputs.foo }}
+      NAME: ${{ steps.set_my_name.outputs.MYNAME }}
+      
+  name_con:
+    runs-on: ubuntu-latest
+    needs: name_gen
     steps:
-      - name: Generate and export foo
-        id: generate-foo
+      - name: STEP-2
         run: |
-          foo=bar
+          echo "Version from previous job: ${{ needs.name_gen.outputs.NAME }}"
+          
+  
 
-          # 1) Step output (for job output)
-          echo "foo=${foo}" >> "$GITHUB_OUTPUT"
 
-          # 2) Job-scoped environment variable
-          echo "FOO=${foo}" >> "$GITHUB_ENV"
 
-      - name: Inspect values inside producer
-        run: |
-          echo "FOO (set via GITHUB_ENV):   $FOO"
-          echo "foo (step output):          ${{ steps.generate-foo.outputs.foo }}"
 
-  consumer:
-    runs-on: ubuntu-24.04
-    needs: producer
-    steps:
-      - name: Inspect values inside consumer (note FOO is unset)
-        run: |
-          echo "Value from producer:        ${{ needs.producer.outputs.foo }}"
-          echo "FOO in consumer:            ${FOO:-<UNSET>}"
+# name: Passing Variables Between jobs
+# on:
+#   workflow_dispatch:
+
+# jobs:
+#   producer:
+#     runs-on: ubuntu-24.04
+
+#     outputs:
+#       foo: ${{ steps.generate-foo.outputs.foo }}
+#     steps:
+#       - name: Generate and export foo
+#         id: generate-foo
+#         run: |
+#           foo=bar
+
+#           # 1) Step output (for job output)
+#           echo "foo=${foo}" >> "$GITHUB_OUTPUT"
+
+#           # 2) Job-scoped environment variable
+#           echo "FOO=${foo}" >> "$GITHUB_ENV"
+
+#       - name: Inspect values inside producer
+#         run: |
+#           echo "FOO (set via GITHUB_ENV):   $FOO"
+#           echo "foo (step output):          ${{ steps.generate-foo.outputs.foo }}"
+
+#   consumer:
+#     runs-on: ubuntu-24.04
+#     needs: producer
+#     steps:
+#       - name: Inspect values inside consumer (note FOO is unset)
+#         run: |
+#           echo "Value from producer:        ${{ needs.producer.outputs.foo }}"
+#           echo "FOO in consumer:            ${FOO:-<UNSET>}"
 
 # name: Versioned Docker Build
 # on:
