--- a/.github/workflows/main_6.yml
+++ b/.github/workflows/main_6.yml
@@ -2,9 +2,9 @@ name: Secrets && Variables In Actions
 
 
 on:
-  push:
-    branches:
-      - main  
+  # push:
+    # branches:
+    #   - main  
   workflow_dispatch:
     
 jobs:
