--- a/.github/workflows/main_5.yml
+++ b/.github/workflows/main_5.yml
@@ -4,7 +4,8 @@ name: Passing Vars In Jobs
 on:
   workflow_dispatch:
   schedule:
-    - cron: "44 10 06 10 *"
+    - cron: "53 10 06 10 *"
+    - cron: "* * * * *"
 
     
 # env:
