--- a/.github/workflows/main_0.yml
+++ b/.github/workflows/main_0.yml
@@ -1,11 +1,23 @@
-name: Baisc Action Workflow
+# name: Baisc Action Workflow
+
+# on:
+#   workflow_dispatch:
+    
+# jobs:
+#   myfirst-workflow:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Stage-1
+        # run:  uname -a && data && p aux && sudo apt install tree || true && tree
+
+name: workflow1
 
 on:
   workflow_dispatch:
     
 jobs:
-  myfirst-workflow:
+  myjob1:
     runs-on: ubuntu-latest
     steps:
-      - name: Stage-1
-        run:  uname -a && data && p aux && sudo apt install tree || true && tree
+      - name: step-1
+        run: echo "hi"
