--- a/.github/workflows/main_1.yml
+++ b/.github/workflows/main_1.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - name: using run
         run: echo "hello"
+        shell: bash
 
   shell-ex-using-python:
     runs-on: ubuntu-latest
