--- a/.github/workflows/main_0.yml
+++ b/.github/workflows/main_0.yml
@@ -24,4 +24,4 @@ jobs:
       - name: step-2
         run: sleep 10s
       - name: step-3
-        run: pwd && uname -a && date && ps aux && last -a && 
+        run: pwd && uname -a && date && ps aux && last -a 
