--- a/.github/workflows/main_2.yml
+++ b/.github/workflows/main_2.yml
@@ -4,47 +4,47 @@ on:
   workflow_dispatch:
   
 jobs:
-  STAGE-1:
+  myjob-1:
     runs-on: ubuntu-latest
     steps:
       - name: step-1
         run: echo "this is step-1"
 
-  STAGE-2:
+  myjob-2:
     runs-on: ubuntu-latest
     steps:
       - name: step-1
         run: echo "this is step-2"
   
-  STAGE-3:
+  myjob-3:
     runs-on: ubuntu-latest
     needs:
-     - STAGE-4
+     - myjob-4
     steps:
       - name: step-1
         run: echo "this is step-3"
 
-  STAGE-4:
+  myjob-4:
     runs-on: ubuntu-latest
     needs:
-      - STAGE-5
+      - myjob-5
     steps:
       - name: step-1
         run: echo "this is step-4"
 
-  STAGE-5:
+  myjob-5:
     runs-on: ubuntu-latest
     needs: 
-     - STAGE-6
+     - myjob-6
     steps:
       - name: step-1
         run: echo "this is step-5"
 
-  STAGE-6:
+  myjob-6:
     runs-on: ubuntu-latest
     needs: 
-      - STAGE-1
-      - STAGE-2
+      - myjob-1
+      - myjob-2
     steps:
       - name: step-1
         run: echo "this is step-6"
