--- a/.github/workflows/main_2.yml
+++ b/.github/workflows/main_2.yml
@@ -65,9 +65,12 @@ jobs:
         run:  echo "job1"
   j2:
     runs-on: ubuntu-latest
+    needs:
+      - j6
     steps:
       - name: job2
         run:  echo "job2"
+
   j3:
     runs-on: ubuntu-latest
     steps:
@@ -85,6 +88,8 @@ jobs:
         run:  echo "job5"
   j6:
     runs-on: ubuntu-latest
+    needs: 
+      - j1
     steps:
       - name: job6
         run:  echo "job6"
