--- a/.github/workflows/main_2.yml
+++ b/.github/workflows/main_2.yml
@@ -73,16 +73,19 @@ jobs:
 
   j3:
     runs-on: ubuntu-latest
+    needs: j2
     steps:
       - name: job3
         run:  echo "job3"
   j4:
     runs-on: ubuntu-latest
+    needs: j3
     steps:
       - name: job4
         run:  echo "job4"
   j5:
     runs-on: ubuntu-latest
+    needs: j4
     steps:
       - name: job5
         run:  echo "job5"
