--- a/.github/workflows/main_3.yml
+++ b/.github/workflows/main_3.yml
@@ -35,16 +35,22 @@ on:
       - "!*.md"
       - "!doc/**"
 
-  # schedule:
-  #   - cron: "45 9 * * *"
-  # https://docs.github.com/en/actions/reference/workflows-and-actions/events-that-trigger-workflows#schedule
+  schedule:
+    - cron: "45 9 * * *"
+  #https://docs.github.com/en/actions/reference/workflows-and-actions/events-that-trigger-workflows#schedule
 
   workflow_dispatch:
   
   workflow_run: 
     workflows: ["Baisc Action Workflow"]
     types:
-      - completed
+      - completed 
+  issues:
+    types:
+      - opened
+      - closed
+      - reopened
+  
 
         
 
